tests/__snapshots__/config-file-options.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tstyche.config.json '$schema' key is allowed: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  + is string?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 passed, 1 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`tstyche.config.json 'target' option: stdout 1`] = `
"adds TypeScript 4.8.4 to <<cwd>>/tests/__fixtures__/config-file-options/.store/4.8.4
uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  + is string?

adds TypeScript 5.3.2 to <<cwd>>/tests/__fixtures__/config-file-options/.store/5.3.2
uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  + is string?

uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.test.ts
  + is string?

Targets:    3 passed, 3 total
Test files: 3 passed, 3 total
Tests:      3 passed, 3 total
Assertions: 3 passed, 3 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`tstyche.config.json 'testFileMatch' option: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./type-tests/isNumber.test.ts
pass ./type-tests/isString.test.ts

Targets:    1 passed, 1 total
Test files: 2 passed, 2 total
Tests:      2 passed, 2 total
Assertions: 2 passed, 2 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`tstyche.config.json handles list item of wrong type: stderr 1`] = `
"Error: Item of the 'testFileMatch' list must be of type string.

  1 | {
  2 |   "testFileMatch": [
> 3 |     true
    |     ^
  4 |   ]
  5 | }

      at ./tstyche.config.json:3:5

"
`;

exports[`tstyche.config.json handles not existing 'rootPath' option path 1`] = `
"Error: The specified path '<<cwd>>/tests/__fixtures__/config-file-options/nope' does not exist.

  1 | {
> 2 |   "rootPath": "../nope"
    |               ^
  3 | }

      at ./config/tstyche.json:2:15

"
`;

exports[`tstyche.config.json handles option argument of wrong type: stderr 1`] = `
"Error: Option 'failFast' requires an argument of type boolean.

  1 | {
> 2 |   "failFast": "always"
    |               ^
  3 | }

      at ./tstyche.config.json:2:15

"
`;

exports[`tstyche.config.json handles single quoted list items: stderr 1`] = `
"Error: String literal with double quotes expected.

  1 | {
> 2 |   "target": ['4.8']
    |              ^
  3 | }

      at ./tstyche.config.json:2:14

"
`;

exports[`tstyche.config.json handles single quoted property names: stderr 1`] = `
"Error: String literal with double quotes expected.

  1 | {
> 2 |   'failFast': true
    |   ^
  3 | }

      at ./tstyche.config.json:2:3

"
`;

exports[`tstyche.config.json handles single quoted values: stderr 1`] = `
"Error: String literal with double quotes expected.

  1 | {
> 2 |   "rootPath": '../'
    |               ^
  3 | }

      at ./tstyche.config.json:2:15

"
`;

exports[`tstyche.config.json handles unknown options: stderr 1`] = `
"Error: Unknown option 'cache'.

  1 | {
> 2 |   "cache": "all",
    |   ^
  3 |   "silent": true,
  4 |   "testFileMatch": [
  5 |     "**/packages/*/__typetests__/*.test.ts"
  6 |   ]

      at ./tstyche.config.json:2:3

Error: Unknown option 'silent'.

  1 | {
  2 |   "cache": "all",
> 3 |   "silent": true,
    |   ^
  4 |   "testFileMatch": [
  5 |     "**/packages/*/__typetests__/*.test.ts"
  6 |   ]

      at ./tstyche.config.json:3:3

"
`;

exports[`tstyche.config.json handles wrong root value: stderr 1`] = `
"Error: The root value of a configuration file must be an object literal.

> 1 | [
    | ^
  2 |   {
  3 |     "setupTimeout": 30
  4 |   }
  5 | ]

      at ./tstyche.config.json:1:1

"
`;
